ai-omniparse/kustomization/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: ai-omniparse
  name: ai-omniparse
