ai-omniparse/kustomization/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-omniparse
  namespace: ai-omniparse
spec:
  selector:
    app: ai-omniparse
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
